Added clean custom listview, special icon for now playing track; Added View Holder and three more ArrayLists to reduce calculations during view construction.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 20
     buildToolsVersion "20.0.0"
-
     defaultConfig {
         applicationId "com.searce.musicplayer"
         minSdkVersion 16
