Added Swipe feature for Prev/Next; Improved Repeat feature; Filtered out small songs; Added new Screens.

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 10 11:55:20 IST 2014
-sdk.dir=C\:\\ASB\\sdk
+#Sun Nov 23 16:25:44 IST 2014
+sdk.dir=C\:\\AndroidSDK\\sdk
